force-app/main/default/objects/Bank__c/fields/Aml_Confirmed_On__c.field-meta.xml
<CustomField>
    <fullName>Aml_Confirmed_On__c</fullName>
    <label>Aml Confirmed On</label>
    <type>Date</type>
</CustomField>