force-app/main/default/objects/Bank__c/fields/Aml_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Aml_Follow_Up_Date__c</fullName>
    <label>Aml Follow Up Date</label>
    <type>Date</type>
</CustomField>