force-app/main/default/objects/Bank__c/fields/Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Birth_City__c</fullName>
    <label>Birth City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>