force-app/main/default/objects/Bank__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Business Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>