force-app/main/default/objects/Bank__c/fields/Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Postal_Code__c</fullName>
    <label>Business Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>