force-app/main/default/objects/Bank__c/fields/Customer_Vetting_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vetting_Status__c</fullName>
    <label>Customer Vetting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>