force-app/main/default/objects/Bank__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>FREELANCER</fullName>
            </value>
            <value>
                <fullName>EMPLOYED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>