force-app/main/default/objects/Bank__c/fields/Expected_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Revenue__c</fullName>
    <label>Expected Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>