force-app/main/default/objects/Bank__c/fields/Fatca_Crs_Confirmed_at__c.field-meta.xml
<CustomField>
    <fullName>Fatca_Crs_Confirmed_at__c</fullName>
    <label>Fatca Crs Confirmed At</label>
    <type>DateTime</type>
</CustomField>