force-app/main/default/objects/Bank__c/fields/Flagged_By_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Flagged_By_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged By Compliance</label>
    <type>Checkbox</type>
</CustomField>