force-app/main/default/objects/Bank__c/fields/Industry_Key__c.field-meta.xml
<CustomField>
    <fullName>Industry_Key__c</fullName>
    <label>Industry Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECONOMICALLY_DEPENDENT_INDIVIDUALS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>