force-app/main/default/objects/Bank__c/fields/Is_Term_Deposit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Term_Deposit_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Term Deposit Enabled</label>
    <type>Checkbox</type>
</CustomField>