force-app/main/default/objects/Bank__c/fields/Nace_Code__c.field-meta.xml
<CustomField>
    <fullName>Nace_Code__c</fullName>
    <label>Nace Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>