force-app/main/default/objects/Bank__c/fields/Risk_Classification_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Classification_Status__c</fullName>
    <label>Risk Classification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>