force-app/main/default/objects/Bank__c/fields/Tax_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Assessment__c</fullName>
    <label>Tax Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>