force-app/main/default/objects/Bank__c/fields/Term_Deposit_Enabled_At__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposit_Enabled_At__c</fullName>
    <label>Term Deposit Enabled At</label>
    <type>DateTime</type>
</CustomField>