force-app/main/default/objects/Bank__c/fields/Terms_conditions_Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Terms_conditions_Signed_At__c</fullName>
    <label>Terms Conditions Signed At</label>
    <type>DateTime</type>
</CustomField>