force-app/main/default/objects/Bank__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>