force-app/main/default/objects/Bank__c/fields/Vat_Number__c.field-meta.xml
<CustomField>
    <fullName>Vat_Number__c</fullName>
    <label>Vat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>