force-app/main/default/objects/Bank__c/recordTypes/Solarisbank.recordType-meta.xml
<RecordType>
    <fullName>Solarisbank</fullName>
    <active>true</active>
    <label>Solarisbank</label>
</RecordType>